Fix initializing PlayerInventoryManager
Signed-off-by: Byron Marohn <Combustible@live.com>